[metadata]
name = just-plot-it
version = 0.0.1
author = Shane Kercheval
author_email = shane.kercheval@gmail.com
description = Opinionated plotting package for data exploration.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shanekercheval/just-plot-it
project_urls =
    Bug Tracker = https://github.com/shanekercheval/just-plot-it/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.9
install_requires =
    matplotlib
    numpy
    pandas
    plotly_express
    python-dateutil
